Pivotal ID # 138327043: Email User Successful Submission
Send the email based on a configuration property

--- a/submission/submission-webapp/src/main/resources/emails/successful-submission.html
+++ b/submission/submission-webapp/src/main/resources/emails/successful-submission.html
@@ -6,20 +6,22 @@
   number ${ACC_NO}.
 </p>
 <p>
-  You'll be able to see it <a href="https://www.ebi.ac.uk/biostudies/studies/${ACC_NO}">here</a> in the next 24
-  hours.
+  You'll be able to see it at <a href="https://www.ebi.ac.uk/biostudies/studies/${ACC_NO}">
+  https://www.ebi.ac.uk/biostudies/studies/${ACC_NO}</a> in the next 24 hours.
 </p>
 <div style="display: ${IS_PRIVATE};">
   <p>
-    Your submission is private so is not publicly available. You will be able to see it only by logging in or by accessing
-    it through this <a href="'https://www.ebi.ac.uk/biostudies/studies/${ACC_NO}/${SECRET_KEY}">link</a>.
+    Your submission is private so is not publicly available. You will be able to see it only by logging in or by
+    accessing it through this <a href="https://www.ebi.ac.uk/biostudies/studies/${ACC_NO}/${SECRET_KEY}">
+    https://www.ebi.ac.uk/biostudies/studies/${ACC_NO}/${SECRET_KEY}</a> link.
   </p>
 </div>
 <div style="display: ${IS_PRIVATE_RELEASE_DATE};">
   <p>
-    The release date of this study is set to ${RELEASE_DATE}, and it will be publicly available after that. You will be
+    The release date of this study is set to ${RELEASE_DATE} and it will be publicly available after that. You will be
     able to see it only by logging in or by accessing it through this
-    <a href="'https://www.ebi.ac.uk/biostudies/studies/${ACC_NO}/${SECRET_KEY}">link</a>.
+    <a href="https://www.ebi.ac.uk/biostudies/studies/${ACC_NO}/${SECRET_KEY}">
+    https://www.ebi.ac.uk/biostudies/studies/${ACC_NO}/${SECRET_KEY}</a> link.
   </p>
 </div>
 <p>
