Pivotal ID # 138327043: Email User Successful Submission
Improve email template

--- a/submission/submission-webapp/src/main/resources/emails/successful-submission.html
+++ b/submission/submission-webapp/src/main/resources/emails/successful-submission.html
@@ -11,17 +11,17 @@
 </p>
 <div style="display: ${IS_PRIVATE};">
   <p>
-    Your submission is private so is not publicly available. You will be able to see it only by logging in or by
-    accessing it through this <a href="https://www.ebi.ac.uk/biostudies/studies/${ACC_NO}/${SECRET_KEY}">
-    https://www.ebi.ac.uk/biostudies/studies/${ACC_NO}/${SECRET_KEY}</a> link.
+    The study release date is not set so it's not publicly available. You will be able to see it only by logging in or
+    by accessing it through this link: <a href="https://www.ebi.ac.uk/biostudies/studies/${ACC_NO}/${SECRET_KEY}">
+    https://www.ebi.ac.uk/biostudies/studies/${ACC_NO}/${SECRET_KEY}</a>.
   </p>
 </div>
 <div style="display: ${IS_PRIVATE_RELEASE_DATE};">
   <p>
     The release date of this study is set to ${RELEASE_DATE} and it will be publicly available after that. You will be
-    able to see it only by logging in or by accessing it through this
+    able to see it only by logging in or by accessing it through this link:
     <a href="https://www.ebi.ac.uk/biostudies/studies/${ACC_NO}/${SECRET_KEY}">
-    https://www.ebi.ac.uk/biostudies/studies/${ACC_NO}/${SECRET_KEY}</a> link.
+    https://www.ebi.ac.uk/biostudies/studies/${ACC_NO}/${SECRET_KEY}</a>.
   </p>
 </div>
 <p>
@@ -29,7 +29,7 @@
 </p>
 <br/>
 
-Best regards,<br/>
+Best regards,<br/><br/>
 
 BioStudies Team
 <br/>
